--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+mod_id=ic2c_json_crops
+mod_version=1.0.0
+minecraft_version=1.19.2
+mappings_version=2022.10.09
+forge_version=43.2.3
