--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,9 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         maven { url = 'https://maven.minecraftforge.net/' }
+        maven {
+            name = 'parchment'
+            url = 'https://maven.parchmentmc.org'
+        }
     }
 }
