forgot to add ic2c as a dependency, changed crop registration back to the common setup event

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -26,3 +26,9 @@ Utility mod for maing ic2c crops using json.
     versionRange="[1.19.2,1.19.3)"
     ordering="NONE"
     side="BOTH"
+[[dependencies.ic2c_json_crops]]
+    modId="ic2"
+    mandatory=true
+    versionRange="[1.19.2-2.1,)"
+    ordering = "AFTER"
+    side = "BOTH"
