updated example crop json

--- a/src/main/resources/example-crop.json5
+++ b/src/main/resources/example-crop.json5
@@ -33,7 +33,16 @@
   "growthDuration": [ //if omitted or left empty, defaults to tier in properties object * 200
     200,
     400,
-    600
+    { //all fields in this object are optional
+      "growth": 600,
+      "minLightLevel": 1, //defaults to 0
+      "maxLightLevel": 14, //defaults to 15
+      "minHumidity": 0, //defaults to -1, which means it gets ignored
+      "maxHumidity": 9, //defaults to -1, which means it gets ignored
+      "blocksBelow": [ //list of valid blocks/block tags
+        "minecraft:dirt"
+      ]
+    }
   ],
   "droppingSeeds": true, //whether this crop can drop seeds if seed mode is enabled
   "seedDrops": [
