--- a/src/main/resources/example-subsoil.json5
+++ b/src/main/resources/example-subsoil.json5
@@ -1,6 +1,7 @@
 {
-  "humidity" : 10, //how much humidity this subsoil adds to the current environment, can be positive or negative
-  "nutrients" : 10, //how many nutrients this subsoil adds to the current environment, can be positive or negative
+  //For balance reasons, the sum of humidity and nutrients should not exceed +2, unless special or very rare
+  "humidity" : -2, //how much humidity this subsoil adds to the current environment, can be positive or negative
+  "nutrients" : 1, //how many nutrients this subsoil adds to the current environment, can be positive or negative
   "blocks": [ //List of blocks to register this subsoil to. can be used to override existing subsoils.
     "minecraft:diamond_block"
   ]
