added support for hydrated farmlands

--- a/src/main/resources/example-farmland.json5
+++ b/src/main/resources/example-farmland.json5
@@ -5,7 +5,9 @@
   /*   List of blocks to register this farmland to. can be used to override existing farmlands.
   Note: not recommended to override vanilla farmland with this, as vanilla farmland can
   have different humidity depending on whether it is wet or dry.
-  */ "blocks": [ //
+  */
+  "canHydrate": false, //whether this farmland can become hydrated like vanilla farmland. if true, hydration will be 0 when the farmland is not hydrated. if excluded, defaults to false
+  "blocks": [ //
     "minecraft:diamond_block"
   ]
 }
