--- a/src/main/resources/example-crop.json5
+++ b/src/main/resources/example-crop.json5
@@ -30,11 +30,9 @@
   //optional
   "cropType" : "AIR", //valid options are AIR, WATER, BOTH
   "optimalHarvestStep": 3, //if omitted defaults to growthSteps
-  "growthDuration": [ //if omitted or left empty, defaults to tier in properties object * 200
-    200,
-    400,
+  "stages": [ //if omitted or left empty,  uses the defaults defined below. Also the last one in this list is used for it's stage and all stages after. stage number is determined by position in list
     { //all fields in this object are optional
-      "growth": 600,
+      "growth": 600, //if omitted, defaults to tier in properties object * 200
       "minLightLevel": 1, //defaults to 0
       "maxLightLevel": 14, //defaults to 15
       "minHumidity": 0, //defaults to -1, which means it gets ignored
